--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -10,7 +10,7 @@
 <!----------------- Thanh thông tin ------------------->
     <div id="Thanhthongtin">
         <div id="ThongTin">
-            <img src="/img/book.png" alt="logo">
+            <img src="../img/book.png" alt="logo">
             <div>
                 <h4>Giáo Viên - Trần Thị B</h4>
                 <h5>Môn Toán • Chủ nhiệm lớp 6A</h5>
