--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -18,7 +18,7 @@
         </div>
         <div id="Thoat">
             <button id="btnLogout" style="background-color: white;cursor: pointer;">
-                <a href="/index.html" style="color: black;text-decoration-line: none;">
+                <a href="..\XacThuc\dangnhap.html" style="color: black;text-decoration-line: none;">
                     <i class="fa-solid fa-right-from-bracket"></i>
                 Đăng xuất</a>
             </button>
@@ -37,35 +37,35 @@
         <div id="ThongSo">
             <div id="TongHS">
                 <h4>Tổng học sinh
-                    <img src="/img/people.png" alt="anh">
+                    <img src="../img/people.png" alt="anh">
                 </h4>
                 <h2>50</h2>
                 <p>Trong các lớp dạy</p>
             </div>
             <div id="CoMat">
                 <h4>Có mặt hôm nay
-                    <img src="/img/checked.png" alt="anh">
+                    <img src="../img/checked.png" alt="anh">
                 </h4>
                 <h2>87</h2>
                 <p>96.7% tỷ lệ</p>
             </div>
             <div id="VangMat">
                 <h4>Vắng mặt
-                    <img src="/img/clock.png" alt="anh">
+                    <img src="../img/clock.png" alt="anh">
                 </h4>
                 <h2>3</h2>
                 <p>Học sinh nghỉ học</p>
             </div>
             <div id="DiMuon">
                 <h4>Đi muộn
-                    <img src="/img/clock.png" alt="anh">
+                    <img src="../img/clock.png" alt="anh">
                 </h4>
                 <h2>2</h2>
                 <p>Học sinh đến muộn</p>
             </div>
             <div id="ChoChamDiem">
                 <h4>Chờ chấm điểm
-                    <img src="/img/page.png" alt="anh">
+                    <img src="../img/page.png" alt="anh">
                 </h4>
                 <h2>2</h2>
                 <p>Bài thi cần chấm</p>
@@ -121,7 +121,7 @@
     </div>
 <!-----------------Diem Danh------------------->
     <div id="DieDanh" style="display: none;">
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/user (1).png" alt=""><span></span>Điểm danh học sinh</h3>
+        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="../img/user (1).png" alt=""><span></span>Điểm danh học sinh</h3>
         <span style="color: gray;">Ghi nhận tình hình chuyên cần hàng ngày</span>
         <div id="ChonLop">
             <div id="Lop">
@@ -271,7 +271,7 @@
     </div>
 <!-----------------SỨC KHỎE------------------->
     <div id="SucKhoe" style="display: none;">
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/heart.png" alt=""><span></span>Quản lý sức khỏe và dinh dưỡng</h3>
+        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="../img/heart.png" alt=""><span></span>Quản lý sức khỏe và dinh dưỡng</h3>
         <span style="color: gray;">Ghi chú tình hình sức khỏe và chế độ ăn học sinh</span>
         <div id="ChonLopSK">
             <div id="LopSK">
@@ -386,7 +386,7 @@
     
 <!------------------Điểm số------------------>
     <div id="DiemSo" style="display: none;">
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/open-book.png" alt=""><span></span>Quản lý điểm số</h3>
+        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="../img/open-book.png" alt=""><span></span>Quản lý điểm số</h3>
         <span style="color: gray;">Nhập điểm, nhận xét và tạo phiếu điểm học sinh</span>
 
         <div id="ChonLopDS">
@@ -531,7 +531,7 @@
               <div><span>Nội dung</span><textarea style="resize: none;  " id="TXTNDSTLL" placeholder="Nhập nội dung tin nhắn"></textarea></div>
              <button id="btnCSSTLL"><i class="fa-solid fa-paper-plane"></i>Gửi tin nhắn</button>
         </div>
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/message.png" alt=""><span></span>Liên lạc phụ huynh</h3>
+        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="src="../img/message.png" alt=""><span></span>Liên lạc phụ huynh</h3>
         <span style="color: gray;">Gửi tin nhắn và thông báo tới phụ huynh học sinh</span>
         </h3>
         <!-----------------Menu Liên lạc------------------->
