sua id cac thuoc tinh phan QL Giao Vien, Lop, Su Kien

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -375,15 +375,15 @@
             </div>
             <p class="modal-desc">Nhập thông tin lớp học vào form bên dưới.</p>
 
-            <form class="class-form">
+            <form class="class-form" id="classForm">
                 <div class="form-group">
                     <label>Tên lớp</label>
-                    <input type="text" placeholder="">
+                    <input type="text" id="className" placeholder="">
                 </div>
 
                 <div class="form-group">
                     <label>Khối</label>
-                    <select>
+                    <select id="Khoi">
                         <option>Chọn khối</option>
                         <option>Khối 1</option>
                         <option>Khối 2</option>
@@ -393,7 +393,7 @@
 
                 <div class="form-group">
                     <label>GVCN</label>
-                    <select>
+                    <select id="GVCN-class">
                         <option>Chọn giáo viên</option>
                         <option>Nguyễn Văn A</option>
                         <option>Trần Thị B</option>
@@ -402,12 +402,12 @@
 
                 <div class="form-group">
                     <label>Sĩ số tối đa</label>
-                    <input type="number" value="35">
+                    <input type="number" id="siso" value="35">
                 </div>
 
                 <div class="form-group">
                     <label>Phòng học</label>
-                    <input type="text" placeholder="">
+                    <input type="text" id="classroom" placeholder="">
                 </div>
 
                 <div class="form-footer">
@@ -422,15 +422,15 @@
             </div>
             <p class="modal-desc">Nhập thông tin lớp học vào form bên dưới.</p>
 
-            <form class="class-form">
+            <form class="class-form" id="classFormUpdate">
                 <div class="form-group">
                     <label>Tên lớp</label>
-                    <input type="text" placeholder="">
+                    <input type="text" id="classNameUpdate">
                 </div>
 
                 <div class="form-group">
                     <label>Khối</label>
-                    <select>
+                    <select id="KhoiUpdate">
                         <option>Chọn khối</option>
                         <option>Khối 1</option>
                         <option>Khối 2</option>
@@ -440,7 +440,7 @@
 
                 <div class="form-group">
                     <label>GVCN</label>
-                    <select>
+                    <select id="GVCN-classUpdate">
                         <option>Chọn giáo viên</option>
                         <option>Nguyễn Văn A</option>
                         <option>Trần Thị B</option>
@@ -449,12 +449,12 @@
 
                 <div class="form-group">
                     <label>Sĩ số tối đa</label>
-                    <input type="number" value="35">
+                    <input type="number" id="sisoUpdate" value="35">
                 </div>
 
                 <div class="form-group">
                     <label>Phòng học</label>
-                    <input type="text" placeholder="">
+                    <input type="text" id="classroomUpdate">
                 </div>
 
                 <div class="form-footer">
@@ -482,25 +482,25 @@
                 </div>
                 <p class="modal-desc">Nhập thông tin giáo viên và phân công lớp.</p>
 
-                <form class="teacher-form">
+                <form class="teacher-form" id="teacherForm">
                     <div class="form-group">
                         <label>Họ tên</label>
-                        <input type="text" placeholder="">
+                        <input type="text" id="teacherName" placeholder="">
                     </div>
 
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="email" placeholder="">
+                        <input type="email" id="teacherEmail" placeholder="">
                     </div>
 
                     <div class="form-group">
                         <label>Số điện thoại</label>
-                        <input type="text" placeholder="">
+                        <input type="text" id="teacherSDT" placeholder="">
                     </div>
 
                     <div class="form-group">
                         <label>Môn dạy</label>
-                        <select>
+                        <select id="teacherSubject">
                             <option>Chọn môn dạy</option>
                             <option>Toán</option>
                             <option>Ngữ văn</option>
@@ -511,7 +511,7 @@
 
                     <div class="form-group">
                         <label>Lớp dạy</label>
-                        <div class="checkbox-group">
+                        <div class="checkbox-group" id="teacherClass">
                             <label><input type="checkbox"> 1A</label>
                             <label><input type="checkbox"> 1B</label>
                             <label><input type="checkbox"> 1C</label>
@@ -523,7 +523,7 @@
 
                     <div class="form-group">
                         <label>Chủ nhiệm</label>
-                        <input id="checkbox-chunhiem" type="checkbox">
+                        <input id="checkbox-chunhiem" class="teacherCN" type="checkbox">
                     </div>
 
                     <div class="form-footer">
@@ -538,25 +538,25 @@
                 </div>
                 <p class="modal-desc">Nhập thông tin giáo viên và phân công lớp.</p>
 
-                <form class="teacher-form">
+                <form class="teacher-form" id="teacherFormUpdate">
                     <div class="form-group">
                         <label>Họ tên</label>
-                        <input type="text" placeholder="">
+                        <input type="text" id="teacherNameUpdate">
                     </div>
 
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="email" placeholder="">
+                        <input type="email" id="teacherEmailUpdate">
                     </div>
 
                     <div class="form-group">
                         <label>Số điện thoại</label>
-                        <input type="text" placeholder="">
+                        <input type="text" id="teacherSDTUpdate">
                     </div>
 
                     <div class="form-group">
                         <label>Môn dạy</label>
-                        <select>
+                        <select id="teacherSubjectUpdate">
                             <option>Chọn môn dạy</option>
                             <option>Toán</option>
                             <option>Ngữ văn</option>
@@ -567,7 +567,7 @@
 
                     <div class="form-group">
                         <label>Lớp dạy</label>
-                        <div class="checkbox-group">
+                        <div class="checkbox-group" id="teacherClassUpdate">
                             <label><input type="checkbox"> 1A</label>
                             <label><input type="checkbox"> 1B</label>
                             <label><input type="checkbox"> 1C</label>
@@ -579,7 +579,7 @@
 
                     <div class="form-group">
                         <label>Chủ nhiệm</label>
-                        <input id="checkbox-chunhiem" type="checkbox">
+                        <input id="checkbox-chunhiem" class="teacherCNUpdate" type="checkbox">
                     </div>
 
                     <div class="form-footer">
@@ -611,7 +611,7 @@
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
                             <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
                     <tr>
@@ -627,7 +627,7 @@
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
                             <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
                     <tr>
@@ -640,7 +640,7 @@
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
                             <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                            <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
                 </tbody>
@@ -666,7 +666,7 @@
                 </div>
                 <p class="modal-desc">Nhập thông tin sự kiện vào form bên dưới.</p>
 
-                <form class="event-form">
+                <form class="event-form" id="eventForm">
                     <div class="form-group">
                         <label for="event-name">Tên</label>
                         <input type="text" id="event-name" placeholder="">
@@ -705,26 +705,26 @@
                 </div>
                 <p class="modal-desc">Nhập thông tin sự kiện vào form bên dưới.</p>
 
-                <form class="event-form">
+                <form class="event-form" id="eventFormUpdate">
                     <div class="form-group">
                         <label for="event-name">Tên</label>
-                        <input type="text" id="event-name" placeholder="">
+                        <input type="text" id="event-nameUpdate" placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="event-description">Mô tả</label>
-                        <textarea id="event-description" rows="3" placeholder=""></textarea>
+                        <textarea id="event-descriptionUpdate" rows="3" placeholder=""></textarea>
                     </div>
                     <div class="form-group">
                         <label for="event-date">Ngày</label>
-                        <input type="text" id="event-date" placeholder="dd/mm/yyyy">
+                        <input type="text" id="event-dateUpdate" placeholder="dd/mm/yyyy">
                     </div>
                     <div class="form-group">
                         <label for="event-time">Giờ</label>
-                        <input type="text" id="event-time" placeholder="--:-- --">
+                        <input type="text" id="event-timeUpdate" placeholder="--:-- --">
                     </div>
                     <div class="form-group">
                         <label>Loại</label>
-                        <div class="event-type">
+                        <div class="event-typeUpdate">
                             <div><input type="radio" name="type"> <span>Học thuật</span></div>
                             <div><input type="radio" name="type"> <span>Kiểm tra</span></div>
                             <div><input type="radio" name="type"> <span>Nghỉ lễ</span></div>
@@ -757,7 +757,7 @@
                     </div>
                     <div class="eventlist-actions">
                         <button class="edit editEvent"><i class="fa-regular fa-pen-to-square"></i></button>
-                        <button><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="delete deleteEvent"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
 
@@ -779,7 +779,7 @@
                     </div>
                     <div class="eventlist-actions">
                         <button class="edit editEvent"><i class="fa-regular fa-pen-to-square"></i></button>
-                        <button><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="delete deleteEvent"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
 
@@ -801,7 +801,7 @@
                     </div>
                     <div class="eventlist-actions">
                         <button class="edit editEvent"><i class="fa-regular fa-pen-to-square"></i></button>
-                        <button><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="delete deleteEvent"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
             </div>
