fix loi button dang nhap

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="clear"></div>
                 <br>
                 <div class="truongtieuhoctuonglai-left-buttons">
-                    <input type="button" value="Đăng nhập">
+                    <a href="XacThuc/dangnhap.html"><input type="button" value="Đăng nhập"></a>
                     <input id="button-timhieuthem" type="button" value="Tìm hiểu thêm">
                 </div>
 
@@ -372,4 +372,5 @@
         </div>
     </div>
 </body>
+
 </html>
