change some small things

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -388,6 +388,8 @@
                         <option>Khối 1</option>
                         <option>Khối 2</option>
                         <option>Khối 3</option>
+                        <option>Khối 4</option>
+                        <option>Khối 5</option>
                     </select>
                 </div>
 
@@ -395,8 +397,6 @@
                     <label>GVCN</label>
                     <select id="GVCN-class">
                         <option>Chọn giáo viên</option>
-                        <option>Nguyễn Văn A</option>
-                        <option>Trần Thị B</option>
                     </select>
                 </div>
 
@@ -435,6 +435,8 @@
                         <option>Khối 1</option>
                         <option>Khối 2</option>
                         <option>Khối 3</option>
+                        <option>Khối 4</option>
+                        <option>Khối 5</option>
                     </select>
                 </div>
 
@@ -442,8 +444,6 @@
                     <label>GVCN</label>
                     <select id="GVCN-classUpdate">
                         <option>Chọn giáo viên</option>
-                        <option>Nguyễn Văn A</option>
-                        <option>Trần Thị B</option>
                     </select>
                 </div>
 
