sua mot so loi can lech

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bảng điều khiển phụ huynh</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -360,22 +361,22 @@
                         <h4>Chế độ ăn uống</h4>
                         <div class="bua-an">
                             <div class="bua">
-                            <div class="icon">🍎</div>
+                            <i class="fa-thin fa-apple-whole"></i>
                             <p>Bữa sáng</p>
                             <span class="daydu">Đầy đủ</span>
                             </div>
                             <div class="bua">
-                            <div class="icon">🍽️</div>
+                            <i class="fa-thin fa-plate-utensils"></i>
                             <p>Bữa trưa</p>
                             <span class="daydu">Đầy đủ</span>
                             </div>
                             <div class="bua">
-                            <div class="icon">🍇</div>
+                            <i class="fa-thin fa-apple-whole"></i>
                             <p>Bữa phụ</p>
                             <span class="daydu">Đầy đủ</span>
                             </div>
                             <div class="bua">
-                            <div class="icon nuocuong"></div>
+                            <i class="fa-regular fa-glass-water"></i>
                             <p>Nước uống</p>
                             <span class="lit">1.2L</span>
                             </div>
@@ -470,12 +471,12 @@
                             <span class="daydu">Đầy đủ</span>
                             </div>
                             <div class="bua">
-                            <div class="icon">🍇</div>
+                            <i class="fa-solid fa-cookie-bite"></i>
                             <p>Bữa phụ</p>
                             <span class="daydu">Đầy đủ</span>
                             </div>
                             <div class="bua">
-                            <div class="icon nuocuong"></div>
+                            <i class="fa-regular fa-glass-water"></i>
                             <p>Nước uống</p>
                             <span class="lit">1.5L</span>
                             </div>
