sua mot so loi logic

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -575,7 +575,7 @@
                 </div>
 
                 <!-- Môn học -->
-                <section class="tatcamonhoc">
+                <div class="tatcamonhoc">
                 <div class="mon-hoc">
                     <div class="tieu-de-mon">
                         <div class="ten-mon">
@@ -754,8 +754,8 @@
                     </div>
                 </div>
             </div>
-            </section>
-            <section class="monchinh">
+        </div>
+            <div class="monchinh">
                 <h3>Tổng quan môn học</h3>
             <div class="subjects" id="subject-list">
                 <!-- Môn Toán -->
@@ -795,8 +795,8 @@
                 </div>
                 </div>
             </div>
-            </section>
-            <section class="tiendo">
+        </div>
+            <div class="tiendo">
                 <div class="vung-chua">
                     <!-- Tiêu đề biểu đồ -->
                     <div class="tieu-de-bieu-do">
@@ -888,7 +888,7 @@
                     </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
 
     <script src="main.js"></script>
